# PhysicalAI-humanoid-robotics-book-project

./: .gitignore  CHATBOT_README.md  CLAUDE.md  QUICK_START.md  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tscongig.json
.claude/: settings.local.json
.claude/agents/: quiz-generator.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  README.md  app.py  chatkit_server.py  database.py  index_content.py  main.py  pyproject.toml  rag_agent.py  requirements.txt  watch_logs.bat
backend/agent/: rag_agent.py
backend/src/utils/: config.py  logger.py  models.py  qdrant_client.py
backend/tools/: agent_tools.py  memory_store.py
docs/: intro.md
docs/part0-introduction/: chapter-1-why-physical-ai-is-the-next-frontier.mdx  chapter-2-the-new-workflow-spec-driven-physical-ai.mdx  part0-introduction.mdx
docs/part1-module1/: chapter-3-ros-2-crash-course.mdx  chapter-4-talking-to-robots.mdx  chapter-5-building-real-packages.mdx  chapter-6-bridging-ai-agents-to-ros.mdx  part-1-self-assessment.mdx  part1-introduction.mdx  part1-module1.mdx
reference/: agent.py
specs/001-docusaurus-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-part0-introduction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-part0-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ros2-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/css/: custom.css
(+53 files in other folders)
