[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG Chatbot Backend for Physical AI & Humanoid Robotics Book"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qdrant-client>=1.12.1",
    "cohere>=5.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.35.0",
    "openai-agents>=0.1.0",
    "pydantic>=2.7.0",
    "pytest>=8.2.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.0.0",
    "litellm>=1.80.9",
    "openai-chatkit>=1.4.0",
]

